# zero2prod

./: .dockerignore  .secrets.baseline  Cargo.toml  Dockerfile  README.md  spec.yaml  test-postmark.sh
.github/workflows/: general.yml
.sqlx/: query-a7381743937e815a9c2c13fd58084a1ae2dc293bc5869065c01b250d287ed1f7.json
configuration/: base.yaml  local.yaml
migrations/: 20250216122953_make_status_not_null_in_subscriptions.sql  20250216123121_create_subscriptions_tokens_table.sql  20250228202944_create_users_table.sql  20250312203314_seed_user.sql  20250325081504_create_idempotency_table.sql  20250329100714_create_newsletter_issues_table.sql  20250329101700_create_issue_delivery_queue.sql  20250329205613_add_retry_column_to_issue_delivery.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_workers.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscribe.rs  subscribe_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs  mod.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
src/routes/newsletter/: get.html  get.rs  post.rs
src/routes/password/: get.html  get.rs  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
