[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
chrono = {version = "0.4.39", default-features=false, features = ["clock"]}
claims = "0.8.0"
config = "0.15.5"
log = "0.4.25"
secrecy = { version = "0.8", features = ["serde"] }
serde = {version = "1", features = ["derive"]}
serde-aux = "4"
serde_json = "1.0.138"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = {version="1.11.1", features = ["v4"]}
validator = { version = "0.20.0", features = ["derive"] }
wiremock = "0.6.2"

[dependencies.reqwest]
version = "0.12"
default-features = false
# json for serde serializing json payloads
features = ["json", "rustls-tls"]


[dependencies.sqlx]
version="0.8"
default-features=false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]


# faster linking with lld
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dev-dependencies]
once_cell = "1.20.2"
quickcheck = "1.0.3"
quickcheck_macros = "1"
fake = "2.9"
rand = "0.8"
serde_json = "1.0.138"
